# shared-memory

./: CMakeLists.txt
include/: SHMFalcon.hpp
src/: SHMFalcon.cpp
tests/: main.cpp
